--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     <li><a href="tomato_all.html">Products</a></li>
                     <li><a href="">Services</a></li>
                     <li><a href="">R & D</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
 
             </div>
